<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompanyActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_margin="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_about"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:textStyle="normal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_about2"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:textStyle="normal"/>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>